@@ -181,11 +181,6 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-antrun-plugin</artifactId>
-                    <version>${maven-antrun.version}</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-dependency-plugin</artifactId>
                     <version>3.0.0</version>
                     <executions>
@@ -204,94 +199,8 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.19.1</version>
-                    <!-- Note config is repeated in scalatest config -->
-                    <configuration>
-                        <includes>
-                            <include>**/Test*.java</include>
-                            <include>**/*Test.java</include>
-                            <include>**/*TestCase.java</include>
-                            <include>**/*Suite.java</include>
-                        </includes>
-                        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-                        <argLine>-ea -Xmx3g -Xss4m -XX:ReservedCodeCacheSize=${CodeCacheSize} -Djava.library.path=${java.library.path}</argLine>
-                        <environmentVariables>
-                            <SPARK_PREPEND_CLASSES>1</SPARK_PREPEND_CLASSES>
-                            <SPARK_SCALA_VERSION>${scala.binary.version}</SPARK_SCALA_VERSION>
-                            <SPARK_TESTING>1</SPARK_TESTING>
-                            <JAVA_HOME>${test.java.home}</JAVA_HOME>
-                        </environmentVariables>
-                        <systemProperties>
-                            <log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
-                            <derby.system.durability>test</derby.system.durability>
-                            <java.awt.headless>true</java.awt.headless>
-                            <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
-                            <spark.testing>1</spark.testing>
-                            <spark.master.rest.enabled>false</spark.master.rest.enabled>
-                            <spark.ui.enabled>false</spark.ui.enabled>
-                            <spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
-                            <spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
-                            <spark.memory.debugFill>true</spark.memory.debugFill>
-                            <!-- Needed by sql/hive tests. -->
-                            <test.src.tables>src</test.src.tables>
-                        </systemProperties>
-                        <failIfNoTests>false</failIfNoTests>
-                        <excludedGroups>${test.exclude.tags}</excludedGroups>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>test</id>
-                            <goals>
-                                <goal>test</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>3.0.2</version>
-                </plugin>
-                <plugin>
-                    <groupId>org.scalatest</groupId>
-                    <artifactId>scalatest-maven-plugin</artifactId>
-                    <version>1.0</version>
-                    <!-- Note config is repeated in surefire config -->
-                    <configuration>
-                        <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-                        <junitxml>.</junitxml>
-                        <filereports>SparkTestSuite.txt</filereports>
-                        <argLine>-ea -Xmx3g -XX:MaxPermSize=${MaxPermGen} -XX:ReservedCodeCacheSize=${CodeCacheSize} -Djava.library.path=${java.library.path}</argLine>
-                        <stderr/>
-                        <environmentVariables>
-                            <SPARK_PREPEND_CLASSES>1</SPARK_PREPEND_CLASSES>
-                            <SPARK_SCALA_VERSION>${scala.binary.version}</SPARK_SCALA_VERSION>
-                            <SPARK_TESTING>1</SPARK_TESTING>
-                            <JAVA_HOME>${test.java.home}</JAVA_HOME>
-                        </environmentVariables>
-                        <systemProperties>
-                            <log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>
-                            <derby.system.durability>test</derby.system.durability>
-                            <java.awt.headless>true</java.awt.headless>
-                            <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
-                            <spark.testing>1</spark.testing>
-                            <spark.ui.enabled>false</spark.ui.enabled>
-                            <spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
-                            <spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
-                            <!-- Needed by sql/hive tests. -->
-                            <test.src.tables>__not_used__</test.src.tables>
-                        </systemProperties>
-                        <tagsToExclude>${test.exclude.tags}</tagsToExclude>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>test</id>
-                            <goals>
-                                <goal>test</goal>
-                            </goals>
-                        </execution>
-                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -331,6 +240,26 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.4.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <artifactSet>
+                                <includes>
+                                    <include>org.apache.poi:poi</include>
+                                </includes>
+                            </artifactSet>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
             </plugin>
             <plugin>
@@ -355,71 +284,6 @@
                             <target>
                                 <mkdir dir="${project.build.directory}/tmp" />
                             </target>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!-- Enable surefire and scalatest in all children, in one place: -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-            </plugin>
-            <!-- Scalatest runs all Scala tests -->
-            <plugin>
-                <groupId>org.scalatest</groupId>
-                <artifactId>scalatest-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>prepare-test-jar</id>
-                        <phase>${build.testJarPhase}</phase>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                        <configuration>
-                            <excludes>
-                                <exclude>log4j.properties</exclude>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>test-jar-on-test-compile</id>
-                        <phase>test-compile</phase>
-                        <goals>
-                            <goal>test-jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>build-helper-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>add-scala-test-sources</id>
-                        <phase>generate-test-sources</phase>
-                        <goals>
-                            <goal>add-test-source</goal>
-                        </goals>
-                        <configuration>
-                            <sources>
-                                <source>src/test/gen-java</source>
-                            </sources>
                         </configuration>
                     </execution>
                 </executions>
